# cc-treeiso-plugin

./: CHANGELOG.md  CMakeLists.txt  README.md  info.json  qTreeIso.qrc
include/: API.h  CMakeLists.txt  Common.h  CutPursuit.h  CutPursuit_KL.h  CutPursuit_L2.h  CutPursuit_Linear.h  CutPursuit_SPG.h  Graph.h  TreeIso.h  TreeIsoHelper.h  TreeIsoHelper.hpp  ccTreeIsoDlg.h  cut_pursuit.hpp  qTreeIso.h  qTreeIsoCommands.h
src/: CMakeLists.txt  TreeIso.cpp  cut_pursuit.cpp  qTreeIso.cpp
ui/: CMakeLists.txt  TreeIsoDlg.ui
